# TFTMusicPlayer

./: .mxproject  CMakeLists.txt  TFTMusicPlayer.ioc
Core/Inc/: main.h
Core/Src/: main.c  stm32f4xx_hal_msp.c
Core/Src/Screens/Inc/: screenBlank.h  screenIntro.h  screenMainMenu.h  screenPlayer.h  screenVerification.h  symbols.h
Core/Src/Screens/Src/: screenBlank.c  screenIntro.c  screenMainMenu.c  screenPlayer.c  screenVerification.c
Libraries/tft/: CMakeLists.txt  ILI9486.h  functions.h  listColors.h  tft.c  user_setting.h
Modules/: moduleInit.h
Modules/DFPCMS/: DFPCMS.c  DFPCMS.h  dfPlayerCommands.h
Modules/Joystick/: Joystick.c  Joystick.h
Modules/Screen/: Screen.c  Screen.h
Modules/ScreenManager/: ScreenManager.c  ScreenManager.h
Modules/Serial/: Serial.c  Serial.h
Modules/TFTElements/Button/: Button.c  Button.h
Modules/TFTElements/Circle/: Circle.c  Circle.h
Modules/TFTElements/Rectangle/: Rectangle.c  Rectangle.h
Modules/TFTElements/Text/: Text.c  Text.h
Modules/TFTElements/Triangle/: Triangle.c  Triangle.h
Modules/TimeCounter/: TimeCounter.c  TimeCounter.h
